# gpio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gpio.sh  main.c
.github/workflows/: ci.yml
examples/: CMakeLists.txt  README.md
examples/pwm/: CMakeLists.txt  main.c
examples/sysfs/: CMakeLists.txt  main.c
include/: clock.h  errors.h  mem.h  pwm.h  sysfs.h
include/static/: pwm.h  sysfs.h
lib/pwm/include/: pwm.h
lib/pwm/src/: pwm.c
pwm/: README.md  errors.h  pwm.c  pwm.h
scripts/: .gitignore  Makefile  gpio.sh  mmap.c
src/: clock.c  mem.c  pwm.c  sysfs.c
tests/: CMakeLists.txt  main.cpp  test_pwm.cpp  test_sysfs.cpp
tests/mocks/: pwm_mock.c  pwm_mock.h
